# GOAT-TS

./: .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  CODEBASE.md  CONTRIBUTING.md  LICENSE  PLATFORM.md  README.md  README_ARCHITECTURE.md  ROADMAP.md  TROUBLESHOOTING.md  demo_out.dot  pyproject.toml  pytest.ini  requirements.txt
artifacts/: demo_receipt.json
configs/: graph.yaml  ingestion_sources.yaml  llm.yaml  plugins.yaml  presets.yaml  reasoning.yaml  simulation.yaml
docker/: Dockerfile.spark  docker-compose.yml  prometheus.yml
docs/: extensions.md
examples/: README.md  api_request.json  benchmarks.json  export_out.json  goat_end_to_end.ipynb  gravity_out.json  out.json  sample.txt  sample_input.txt
goat_ts/: __init__.py  cli.py
scripts/: acquire_dumps.py  app_knowledge_explorer.py  app_qa_bot.py  apply_schema.py  dump_graph_stats.py  export_subgraph.py  generate_sample_100k.py  goat_ts_gui.py  goat_ui.py  one_click_demo.py  query_wave.py  run_batch_ingestion.py  run_benchmarks.py  run_gpu_benchmark.py  run_gravity_demo.py  run_ingestion_pipeline.py  run_reasoning_demo.py  run_simulation.py  run_spark_etl.py  self_assessment_demo.py  serve_api.py  start-local.ps1  start-local.sh  streamlit_viz.py
src/: __init__.py  activation.py  memory_manager.py  utils.py
tests/: milestone_phase1.py  milestone_phase2.py  milestone_phase3.py  milestone_phase4.py  milestone_phase5.py  milestone_roadmap_stage1.py  milestone_roadmap_stage2.py  test_benchmarks_runner.py  test_benchmarks_step6.py  test_goal_seeding_and_curiosity.py  test_graph_engine.py  (+14 more)
(+74 files in other folders)
